scrolling down the page, depending on where you rmouse cursor was, caused the modal's "scroll-wrap" div to scroll as well. thus, when you opened it up, sometimes, it looked like it already had been scrolled. thus, I needed to also make sure the "scroll wrap" has no width or height when not visible, to ensure that every time you open the modal, the scroll starts at the top.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -136,8 +136,8 @@ textarea {
   opacity: 0;
   width: 0;
   .scroll-wrap {
-    width: 100%;
-    height: 100%;
+    width: 0;
+    height: 0;
     display: block;
     position: relative;
     overflow-x: hidden;
@@ -148,6 +148,10 @@ textarea {
     display: block;
     opacity: 1;
     width: 100%;
+    .scroll-wrap {
+      height: 100%;
+      width: 100%;
+    }
   }
   button {
     position: absolute;
